--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "url": "Ecommerce"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
