--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "Ecommerce"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.1.0"
   },
