--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "Ecommerce"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   }
 }
